--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -14,6 +14,9 @@ langchain = "^0.3.14"
 python-dotenv = "^1.0.1"
 openai = "^1.59.7"
 requests = "^2.32.3"
+cryptography = "^44.0.0"
+pydantic = "^2.10.5"
+httpx = "0.27.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
